2004-10-21  Stefan Jahn  <stefan@lkcc.org>

	* qucsview.cpp (MPressMoveText): Fixed compiler (gcc 3.4.2)
	error.

2004-10-18  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed small bug: no wrong paint after click in "move
	component text" mode

2004-10-16  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* dialog for id_text painting (subcircuit text)
	* improved printing a little
	* new action: move component text

2004-10-14  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* id_text.cpp: text of subcircuit symbols can be
	repositioned by the user

2004-10-13  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug in paint routine of the markers
	* new paintGrid routine in QucsDoc (also works with zoom)
	* class graphictext works with rotation
	* changed the font handling to avoid problems with Qt bug

2004-10-11  Stefan Jahn  <stefan@lkcc.org>

	* README.translations: Added a brief description about the
	translations.  Added German and French Qt standard dialog
	translations.

2004-10-10  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* homemade function for double to string conversion
	* class "viewpainter" to draw nice looking fonts

2004-10-04  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* new marker property: transparent = yes/no
	* Font size scaled with zoom -> looks nicer

2004-10-03  Stefan Jahn  <stefan@lkcc.org>

	* dialogs/simmessage.cpp (slotDisplayMsg): Fixed layout
	and progress bar filter of simulation messages.

2004-10-01  Stefan Jahn  <stefan@lkcc.org>

	* docs/es/index.html: Updated spanish documentation pages.

	* qucs_es.ts: Applied spanish translation updates.

2004-09-30  Stefan Jahn  <stefan@lkcc.org>

	* docs/Makefile.am (SUBDIRS): Added the es/ directory
	supplied by Jose L. Redrejo Rodriguez.  Thanks a lot!

	* qucsinit.cpp (slotHelpAbout): Mentioned Jose as Spanish
	translator in the About.. box.

	* qucs_es.ts: Applied the spanish translation.  Thanks to