@@ -417,11 +417,13 @@ void ComponentDialog::slotApplyInput()
       ty_Dist = dy;
     }
 
+    QString tmp = Comp->Name;  // is sometimes changed by "recreate"
     Doc->Comps->setAutoDelete(false);
     Doc->deleteComp(Comp);
     Comp->recreate();   // to apply changes to the schematic symbol
     Doc->insertRawComponent(Comp);
     Doc->Comps->setAutoDelete(true);
+    Comp->Name = tmp;
     ((QucsView*)parent())->viewport()->repaint();
   }
 }
