@@ -1,3 +1,7 @@
+2004-10-23  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* fixed several bugs in subcircuit handling
+
 2004-10-21  Stefan Jahn  <stefan@lkcc.org>
 
 	* qucsview.cpp (MPressMoveText): Fixed compiler (gcc 3.4.2)
